# kotonoha

./: .copilot-rules.md  .env  .env.development  .env.production  .gitignore  .nycrc.json  .prettierrc  AGENTS.md  Dockerfile  GEMINI.md  LICENSE  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  requirements_definition.md  svelte.config.js  technical_specifications.md  tsconfig.json  vite.config.js  vitest.config.browser.ts  vitest.config.nodejs.ts  vitest.config.ts  vitest.config.unit.ts
.cargo/: config.toml
.codex/prompts/: kiro-spec-design.md  kiro-spec-impl.md  kiro-spec-requirements.md  kiro-spec-tasks.md  kiro-steering-custom.md  kiro-validate-design.md  kiro-validate-gap.md  kiro-validate-impl.md
.gemini/: settings.json
.github/: copilot-instructions.md
.github/prompts/: kiro-spec-design.prompt.md  kiro-spec-impl.prompt.md  kiro-spec-init.prompt.md  kiro-spec-requirements.prompt.md  kiro-spec-status.prompt.md  kiro-spec-tasks.prompt.md  kiro-steering-custom.prompt.md  kiro-steering.prompt.md  kiro-validate-design.prompt.md  kiro-validate-gap.prompt.md  kiro-validate-impl.prompt.md
.github/workflows/: publish.yml
.kiro/steering/: product.md  structure.md  tech.md
.opencode/command/: kiro-spec-design.prompt.md  kiro-spec-impl.prompt.md  kiro-spec-init.prompt.md  kiro-spec-requirements.prompt.md  kiro-spec-status.prompt.md  kiro-spec-tasks.prompt.md  kiro-steering-custom.prompt.md  kiro-steering.prompt.md  kiro-validate-design.prompt.md  kiro-validate-gap.prompt.md  kiro-validate-impl.prompt.md
.serena/: project.yml
.serena/memories/: code_style.md  codebase_structure.md  commands.md  project_purpose.md  tech_stack.md
doc/: architecture.md  coding_rules.md  coding_style_guide.md  cqrs.md  dependency-graph.md  new_database_tables.md  prompt.md  requirements_definition.md  svelte_coding_rules.md  sync.md  technical_specifications.md  typescript_coding_style.md
e2e-tests/: AGENTS.md  README.md  cleanup-e2e-data.sh  package-lock.json  package.json  tsconfig.json  wdio.conf.js  wdio.conf.ts
e2e-tests/specs/: group-page.e2e.js  group-page.e2e.ts
src/: AGENTS.md  app.css  app.html
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001-initial-tables.sql
src-tauri/src/: audio.rs  download.rs  language_detection.rs  lib.rs  llm.rs  main.rs  migrations.rs  stronghold.rs  tts.rs  youtube.rs
src/integration-tests/: episode-group.browser.test.ts  episode-list.audio-script.browser.test.ts  episode-list.browser.test.ts  episode-list.file.browser.test.ts  episode-list.source.browser.test.ts  episode-list.tts.browser.test.ts  (+6 more)
tools/: generate-dependency-graph.ts  migration-tool.ts
(+306 files in other folders)
