[package]
name = "kotonoha"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# cSpell:words staticlib cdylib rlib

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kotonoha_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
dotenvy = "0.15.7"
tauri-plugin-fs = "2"
tauri-plugin-stronghold = "2"
rust-argon2 = "2.1"
machineid-rs = "1.2"
google-ai-rs = { version = "0.1.1", features = ["serde"] } 

# https://github.com/tauri-apps/plugins-workspace/issues/2048#issuecomment-2923529183
[profile.dev.package.scrypt]
opt-level = 3
