[package]
name = "kotonoha"
# The version is managed centrally in package.json
description = "An app that automates sentence mining for immersive learning."
authors = ["Keigo Nakatani <k5n@users.noreply.github.com> (https://github.com/k5n)"]
license = "GNU General Public License v3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# cSpell:words staticlib cdylib rlib

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kotonoha_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
dotenvy = "0.15"
tauri-plugin-fs = "2"
tauri-plugin-stronghold = "2"
rust-argon2 = "2.1"
machineid-rs = "1.2"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
rand = "0.9"
google-ai-rs = { version = "0.1", features = ["serde"] } 
tauri-plugin-store = "2"

# https://github.com/tauri-apps/plugins-workspace/issues/2048#issuecomment-2923529183
[profile.dev.package.scrypt]
opt-level = 3
